# context-engineering

./: .gitattributes  .gitignore  CLAUDE.md  CODE_OF_CONDUCT.md  INTRO.md  README.md  install.sh  repo-analyzer-test-report.md
.claude/: CLAUDE.md  settings.local.json
.claude/commands/: architecture-patterns.yml  build.md  command-architecture-patterns.yml  compression-performance-patterns.yml  deploy.md  design.md  dev-setup.md  docs-patterns.yml  document.md  execute_project.md  execution-patterns.yml  flag-inheritance.yml  generate_design.md  introspection-patterns.yml  mcp-cache-patterns.yml  persona-patterns.yml  recovery-state-patterns.yml  reference-index.yml  research-patterns.yml  security-patterns.yml  test.md  token-saving-patterns.yml  universal-constants.yml
.claude/shared/: toolkit-core.yml  toolkit-mcp.yml  toolkit-personas.yml  toolkit-rules.yml
.claude/templates/nextjs-tailwind/components/forms/: contact-form.tsx
.claude/templates/nextjs-tailwind/components/layouts/: dashboard.tsx
.claude/templates/nextjs-tailwind/generators/: component-generator.js
.claude/templates/nextjs-tailwind/patterns/: tailwind-utils.json
.claude/templates/python-cli/: README.md.template
docs/: COMMANDS.md  DESIGN_DECISIONS.md  MEDIUM_ARTICLE.md  MODE_SELECTION_AUTOMATION.md  TEAM_ADOPTION_STRATEGY.md
docs/sessions/: README.md  SESSION_2025-07-10_184555.md  SESSION_2025-07-10_184659_DOCUMENT_COMMAND.md  SESSION_2025-07-10_FRAMEWORK_ENHANCEMENT.md  SESSION_2025-07-10_SUMMARY.md  SESSION_2025-07-11_TOKEN_SAVING_IMPLEMENTATION.md  SESSION_MANAGEMENT_GUIDELINES.md
example/: TETRIS_GAME_DESIGN.md  TETRIS_PRP.md
examples/python-cli/: IMPLEMENTATION_SUMMARY.md  PRODUCT_PRP_CLI.md  REPO_ANALYZER_DESIGN.md  REPO_ANALYZER_PRP.md
examples/python-cli/repo-analyzer/: README.md  pyproject.toml
examples/python-cli/repo-analyzer/src/repo_analyzer/: README.md  __init__.py  __main__.py  cli.py
examples/python-cli/repo-analyzer/src/repo_analyzer/analyzers/: __init__.py  base.py
examples/python-cli/repo-analyzer/src/repo_analyzer/commands/: __init__.py  analyze.py
examples/python-cli/repo-analyzer/tests/: test_cli.py
examples/web-app/: CLAUDE.md  TETRIS_GAME_DESIGN.md  TETRIS_PRP.md
framework/: CLAUDE.md  PRODUCT_PRP.md  PRODUCT_PRP_SLIM.md
toolkit/: ARCHITECTURE.md  README.md  SYMBOL_SYSTEM_TRAINING.md  TUTORIAL.md  install_all.sh
